# eigenvalue-pcsc

./: .gitignore  CMakeLists.txt  README.md  temp_plot_eigenvalues.gp
data/matrix/: can_24.mtx  can_24.mtx_values.txt  comp_2.mtx  complex.mtx  dum2.mtx  dum3.mtx  dummy.mtx  dummy.mtx_values.txt  rand_complex.mtx  rand_int.mtx
docs/: Doxyfile
docs/html/: _abstract_power_method_8h_source.html  _argument_parser_8h_source.html  _eigenvalue_solver_8h_source.html  _greeter_8h_source.html  _inverse_power_method_8h_source.html  _inverse_power_method_with_shift_8h_source.html  _m_t_x_matrix_reader_8h_source.html  _matrix_reader_8h_source.html  _matrix_reader_m_t_x_8h_source.html  _power_method_8h_source.html  _power_method_with_shift_8h_source.html  _q_r_method_8h_source.html  _solver_exception_8h_source.html  annotated.html  class_abstract_power_method-members.html  class_abstract_power_method.html  class_algebra_exception-members.html  class_algebra_exception.html  class_argument_parser-members.html  class_argument_parser.html  class_eigenvalue_solver-members.html  class_eigenvalue_solver.html  class_greeter-members.html  class_greeter.html  class_i_o_file_solver_exception-members.html  class_i_o_file_solver_exception.html  class_invalid_input_exception-members.html  class_invalid_input_exception.html  class_inverse_power_method-members.html  class_inverse_power_method.html  class_inverse_power_method_with_shift-members.html  class_inverse_power_method_with_shift.html  class_iteration_limit_exceeded-members.html  class_iteration_limit_exceeded.html  class_m_t_x_matrix_reader-members.html  class_m_t_x_matrix_reader.html  class_matrix_reader-members.html  class_matrix_reader.html  class_matrix_reader_m_t_x-members.html  class_matrix_reader_m_t_x.html  (+27 more)
docs/latex/: annotated.tex  (+52 more)
gnuplot/: plot_eigenvalues.gp  plot_spectrum.gp
include/: Greeter.h  greetings.h
src/: Greeter.cpp  greetings.cpp  main.cpp
tests/: Greeter_test.cpp  greetings_test.cpp
(+61 files in other folders)
